server add, small fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-/forge/broadcast/Deploy.s.sol/
-/forge/cache/solidity-files-cache.json
-/forge/out/
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
